# FoxyFace

./: .gitmodules  README.md
FoxyFace/: .gitignore  AppConstants.py  LICENSE  Main.py  compile-installer.bat  current_release.json  requirements.txt
FoxyFace/Assets/: fail.opus  good.opus  start.opus  tongue_detector.onnx
FoxyFace/compile/windows/: .gitignore  compile-installer.bat  debug_start.bat  extract_version.py  verison.yml
FoxyFace/src/: LoggerManager.py  UpdateChecker.py
FoxyFace/src/autorun/: AutoRunOptions.py  RunStrategyEnum.py  SteamAutoRun.py
FoxyFace/src/ui/qtcreator/: .gitignore  AutoCalibrationWindow.ui  AutoRunSettings.ui  AvatarCalibration.ui  AvatarCalibrationWidget.ui  BabbleSettings.ui  CalibrationSettings.ui  CalibrationSettingsItem.ui  CameraSettings.ui  HasUpdateWindow.ui  MainWindow.ui  ManualCalibrationAvatar.ui  MediaPipeSettings.ui  MediaPipeTongueSettings.ui  SenderSettings.ui  VrcftSettings.ui  foxyface.pyproject  pyproject.toml  requirements.txt  starter.py  ui_AutoCalibrationWindow.py  ui_AutoRunSettings.py  ui_AvatarCalibration.py  ui_AvatarCalibrationWidget.py  ui_BabbleSettings.py  ui_CalibrationSettings.py  ui_CalibrationSettingsItem.py  ui_CameraSettings.py  ui_HasUpdateWindow.py  ui_MainWindow.py  ui_ManualCalibrationAvatar.py  ui_MediaPipeSettings.py  ui_MediaPipeTongueSettings.py  ui_SenderSettings.py  ui_VrcftSettings.py  ui_camerasettings.py  ui_mainwindow.py  ui_mediapipesettings.py
FoxyFaceVRCFTInterface/: FoxyFaceVRCFTInterface.sln  module.json
FoxyFaceVRCFTInterface/FoxyFaceVRCFTInterface/: FoxyFaceVRCFTInterface.cs  FoxyFaceVRCFTInterface.csproj
(+165 files in other folders)
