[project]
name = "PySide Widgets Project"

[tool.pyside6-project]
files = ["starter.py",
        "MainWindow.ui",
        "CameraSettings.ui",
        "MediaPipeSettings.ui",
        "BabbleSettings.ui",
        "AutoRunSettings.ui",
        "AutoCalibrationWindow.ui",
        "CalibrationSettings.ui",
        "CalibrationSettingsItem.ui",
        "HasUpdateWindow.ui",
        "SenderSettings.ui",
        "AvatarCalibration.ui",
        "AvatarCalibrationWidget.ui"]
