[project]
name = "FoxyFace"

[tool.pyside6-project]
files = [
        "AutoCalibrationWindow.ui",
        "AutoRunSettings.ui",
        "AvatarCalibration.ui",
        "AvatarCalibrationWidget.ui",
        "BabbleSettings.ui",
        "CalibrationSettings.ui",
        "CalibrationSettingsItem.ui",
        "CameraSettings.ui",
        "HasUpdateWindow.ui",
        "MainWindow.ui",
        "MediaPipeSettings.ui",
        "MediaPipeTongueSettings.ui",
        "SenderSettings.ui",
        "starter.py",
    ]
